--- a/ballsGame_StepikHW2/ballsGame_StepikHW2.csproj
+++ b/ballsGame_StepikHW2/ballsGame_StepikHW2.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ballsCommonWF\ballsCommonWF.csproj" />
     <ProjectReference Include="..\ballsGame_StepikHW1\ballsGame_StepikHW1.csproj" />
   </ItemGroup>
 
