birdBall can chase mouse click now

--- a/BirdsBalls_Stepik/BirdsBalls_Stepik.csproj
+++ b/BirdsBalls_Stepik/BirdsBalls_Stepik.csproj
@@ -6,4 +6,9 @@
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ballsCommonWF\ballsCommonWF.csproj" />
+    <ProjectReference Include="..\SaluteBalls_StepikWF\SaluteBalls_StepikWF.csproj" />
+  </ItemGroup>
+
 </Project>
